# EMST

./: README.md
parallel/: CMakeLists.txt  README.md
parallel/include/: Morton.h  head.h  iofile.h  pquicksort.h  wspd.h
parallel/src/: .clang-format  Morton.cpp  iofile.cpp  main.cpp  wspd.cpp
serial/: CMakeLists.txt  README.md
serial/include/: Morton.h  head.h  iofile.h  kruskal.h  wspd.h
serial/src/: Morton.cpp  main.cpp  wspd.cpp
